--- a/contact.html
+++ b/contact.html
@@ -11,16 +11,9 @@
 
 <body>
     <header>
-        <a href="index.html" class="header-name">Ramakanth</a>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
-                <li><a href="gallery.html">My Gallery</a></li>
-            </ul>
-            <a class="header-call" href="tel:9390362131">Call</a>
-        </nav>
+        <iframe src="navheader.html" width="100%" height="100%">
+            
+        </iframe>
     </header>
     <main>
         <div class="wrapper">
@@ -32,23 +25,7 @@
         </div>
        
     </main>
-    <div class="wrapper">
-    <footer>
-        <ul class="footer-links-main">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-        </ul>
-        <ul class="footer-links-add">
-            <li><a href="#"> Address </a></li>
-            <li><p>ghatkesar near Sreenidhi college</p></li>
-            <li><p>Hyderabad-509301</p></li>
-            <li><p>Telangana</p></li>
-        </ul>
-   
-    </footer>
-</div>
+
 </body>
 
 </html>
