--- a/gallery.html
+++ b/gallery.html
@@ -10,17 +10,10 @@
 </head>
 
 <body>
-    <header>
-        <a href="index.html" class="header-name">Ramakanth</a>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
-                <li><a href="gallery.html">My Gallery</a></li>
-            </ul>
-            <a class="header-call" href="tel:95059853978">Call</a>
-        </nav>
+     <header>
+        <iframe src="navheader.html" width="100%" height="100%">
+            
+        </iframe>
     </header>
     <main>
         <section class="photos">
@@ -53,23 +46,7 @@
     </div>
     </section>
     </main>
-    <div class="wrapper">
-    <footer>
-        <ul class="footer-links-main">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-        </ul>
-        <ul class="footer-links-add">
-            <li><a href="#"> Address </a></li>
-            <li><p>ghatkesar near Sreenidhi college</p></li>
-            <li><p>Hyderabad- 501301 </p></li>
-            <li><p>Telangana</p></li>
-        </ul>
-       
-    </footer>
-</div>
+
 </body>
 
 </html>
